--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4423,6 +4423,14 @@ body {
 .cid-qHhjzRdPoC H1 {
   text-align: center;
 }
+.cid-qHia1AInVE {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-qHia1AInVE .mbr-section-subtitle {
+  color: #767676;
+}
 .cid-qHhjNcWn2u {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -4484,6 +4492,65 @@ body {
   opacity: 0.7;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
+}
+.cid-qHiafpq3ZJ {
+  padding-top: 45px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qHiafpq3ZJ .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+  text-align: center;
+}
+.cid-qHiafpq3ZJ .mbr-content-text {
+  color: #767676;
+}
+.cid-qHiafpq3ZJ .card {
+  word-wrap: break-word;
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+.cid-qHiafpq3ZJ .mbr-iconfont {
+  font-size: 80px;
+  color: #149dcc;
+}
+.cid-qHiafpq3ZJ .cards-container {
+  display: flex;
+  flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  justify-content: center;
+  -webkit-justify-content: center;
+  word-break: break-word;
+}
+.cid-qHiafpq3ZJ .media-block {
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+  padding-left: 2rem;
+}
+.cid-qHiafpq3ZJ .cards-block {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-qHiafpq3ZJ .card-img {
+  display: -webkit-flex;
+  align-items: center;
+  -webkit-align-items: center;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+}
+@media (max-width: 991px) {
+  .cid-qHiafpq3ZJ .media-block {
+    flex-basis: 100%;
+    -webkit-flex-basis: 100%;
+    padding-left: 0;
+    padding-bottom: 2rem;
+  }
+}
+.cid-qHiafpq3ZJ .mbr-section-title {
+  text-align: center;
 }
 .cid-qHhjA87f85 {
   padding-top: 15px;
