--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,7 +49,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="index.html#form1-1h">
-                        <img src="/stroyka/assets/images/Logo5.png" alt="Mobirise" title="">
+                        <img src="/stroyka/assets/images/Logo5.png" alt="Mobirise" title="" />
                     </a>
                 </div>
             </div>
