--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="{{ "/" | relative_url }}">
-                         <img src="{{ site.logo }}" alt="" style="height: 3.8rem;">
+                         <img src="{{ site.logo }}" alt="" title="" style="height: 3.8rem;" />
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="{{ "/" | relative_url }}">
