--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,4 @@
 <section class="menu cid-qGCDxM1gwR" once="menu" id="menu1-n">
-
-    
-
     <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top collapsed bg-color transparent">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
@@ -15,7 +12,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="{{ "/" | relative_url }}">
-                         <img src="{{ site.logo }}" alt="" media-simple="true" title="" style="height: 3.8rem;" />
+                         <img src="{{ site.logo }}" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="{{ "/" | relative_url }}">
