--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -48,8 +48,8 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="index.html#form1-1h">
-                        <img src="/stroyka/assets/images/Logo5.png">
+                    <a href="{{ "/" | relative_url }}">
+                        <img src="{{ site.logo }}" alt="Mobirise" title="logo" media-simple="true" class="hahaimg" />
                     </a>
                 </div>
             </div>
